--- a/build.xml
+++ b/build.xml
@@ -52,6 +52,7 @@
 			failonerror="yes"
 			fork="yes"
     		source="${javac.source}"
+    		target="${javac.target}"
     		debug="${javac.debug}">
 			<classpath>
 				<path refid="compile.classpath"/>
@@ -65,6 +66,7 @@
 			failonerror="yes"
 			fork="yes"
     		source="${javac.source}"
+    		target="${javac.target}"
     		debug="${javac.debug}">
 			<classpath>
 				<path refid="compile.classpath"/>
