--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<url>https://github.com/RestExpress/Syntaxe</url>
 	<groupId>com.strategicgains</groupId>
 	<artifactId>Syntaxe</artifactId>
-	<version>0.4.4-SNAPSHOT</version>
+	<version>0.4.4</version>
 	<packaging>jar</packaging>
 
 	<parent>
@@ -106,7 +106,8 @@
 		<url>git@github.com:RestExpress/Syntaxe.git</url>
 		<connection>scm:git:git@github.com:RestExpress/Syntaxe.git</connection>
 		<developerConnection>scm:git:git@github.com:RestExpress/Syntaxe.git</developerConnection>
-	</scm>
+	  <tag>Syntaxe-0.4.4</tag>
+  </scm>
 
 	<developers>
 		<developer>
