Implement code and unit tests for object graph validation.

--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,11 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
-					</execution>
+                        <configuration>
+                            <!-- DocLint is enabled by default in Java 8. Override it. -->
+                            <additionalparam>-Xdoclint:none</additionalparam>
+                        </configuration>
+                    </execution>
 				</executions>
 			</plugin>
 			<plugin>
