--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
 						</goals>
 						<configuration>
 							<doclint>none</doclint>
+							<source>1.8</source>
 						</configuration>
 					</execution>
 				</executions>
